--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.52"
+        "doctrine/doctrine-fixtures-bundle": "^3.5",
+        "symfony/maker-bundle": "^1.52",
+        "zenstruck/foundry": "^1.36"
     }
 }
